--- a/src/widgets/sidebar/ui/sidebarButton/style.css
+++ b/src/widgets/sidebar/ui/sidebarButton/style.css
@@ -7,8 +7,24 @@
     color: #323541;
     font-size: 18px;
     font-family: 'Ubuntu';
+    transition: color 0.25s;
 }
 
 .sidebar__button:hover {
+    background-color: #4E46B41F;
+}
+
+.sidebar__button__logout {
+    cursor: pointer;
+    border-radius: 8px;
+    border: none;
+    background: none;
+    color: #323541;
+    padding: 12px 12px 12px 24px;
+    font-size: 18px;
+    text-align: left;
+}
+
+.sidebar__button__logout:hover {
     background-color: #4E46B41F;
 }
