--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
   width: 100%;
   height: 100vh;
   display: grid;
-  grid-template-columns: 320px 4fr;
+  grid-template-columns: 1fr 5fr;
 }
 
 .app__watcher {
