--- a/src/index.css
+++ b/src/index.css
@@ -74,3 +74,21 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+.app {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100vh;
+  display: grid;
+  grid-template-columns: 1fr 5fr;
+}
+
+.app__watcher {
+  margin: 0;
+  padding: 0;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
