--- a/src/index.css
+++ b/src/index.css
@@ -8,10 +8,8 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  /* color: rgba(255, 255, 255, 0.87); */
-  /* background-color: #3c3f52; */
-  background-color: #F5F5F5;
-  color: #000000;
+  background-color: #F9F9F9;
+  color: var(--bulma);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -22,11 +20,11 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: var(--main-trunks);
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: var(--piccolo);
 }
 
 body {
@@ -54,26 +52,26 @@ button {
   transition: border-color 0.25s, color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
-  color: #646cff;
+  border-color: var(--piccolo);
+  color: var(--piccolo);
 }
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
-@media (prefers-color-scheme: light) {
+/* @media (prefers-color-scheme: light) {
   :root {
-    color: #213547;
-    background-color: #ffffff;
+    color: var(--main-trunks);
+    background-color: var(--gohan);
   }
   a:hover {
-    color: #747bff;
+    color: var(--piccolo);
   }
   button {
-    background-color: #f9f9f9;
+    background-color: var(--main-beerus);
   }
-}
+} */
 
 .app {
   margin: 0;
