--- a/src/widgets/sidebar/style/style.css
+++ b/src/widgets/sidebar/style/style.css
@@ -72,6 +72,13 @@
 .sidebar__create__button {
     background: none;
     color: var(--main-trunks);
+    border-radius: 8px;
+    padding: 0.6em 1.2em;
+    border: 1px solid transparent;
+}
+
+.sidebar__create__button:hover {
+    border: 1px solid var(--piccolo);
 }
 
 .sidebar__controls {
