--- a/src/index.css
+++ b/src/index.css
@@ -79,7 +79,7 @@ button:focus-visible {
   width: 100%;
   height: 100vh;
   display: grid;
-  grid-template-columns: 1fr 5fr;
+  grid-template-columns: 320px 1fr;
 }
 
 .app__watcher {
@@ -89,4 +89,11 @@ button:focus-visible {
   height: 100vh;
   display: flex;
   flex-direction: column;
+}
+
+
+@media (max-width: 1074px) {
+  .app {
+    grid-template-columns: 1fr;
+  }
 }
