--- a/src/widgets/sidebar/style/style.css
+++ b/src/widgets/sidebar/style/style.css
@@ -17,6 +17,7 @@
     font-size: 20px;
     font-weight: bold;
     padding: 16px 24px;
+    cursor: default;
 }
 
 .sidebar__logo img {
@@ -107,4 +108,61 @@
     border: 1px solid var(--goku);
     margin: 0 24px 12px;
     border-radius: 8px;
+}
+
+.row__sidebar__container {
+    display: none;
+    width: 100%;
+    height: 64px;
+}
+
+.row__sidebar__logo {
+    height: 32px;
+    display: flex;
+    align-items: center;
+    color: var(--piccolo);
+    font-size: 20px;
+    padding: 16px 24px;
+    font-weight: bold;
+}
+
+.row__sidebar__logo img {
+    height: 32px;
+}
+
+.row__sidebar__controls {
+    display: flex;
+    width: 100%;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.row__sidebar__controls__nav {
+    display: flex;
+    padding: 0 8px;
+}
+
+.row__sidebar__create__button {
+    background: none;
+    color: var(--main-trunks);
+    border-radius: 8px;
+    padding: 0.6em 1.2em;
+    border: 1px solid transparent;
+    display: flex;
+    align-items: center;
+}
+
+.row__sidebar__create__button:hover {
+    border: 1px solid var(--piccolo);
+}
+
+@media (max-width: 1074px) {
+    .sidebar__container {
+        display: none;
+    }
+
+    .row__sidebar__container {
+        display: flex;
+        align-items: center;
+    }
 }
